# drive-inventory

./: .gitignore  README.md  pyproject.toml  requirements.lock.txt  requirements.txt
data/: README.md  download_bast_data.ipynb
data/auxiliary/: calender_18to23.xlsx  (+2 more)
gis/: traffic-emission-inventory.qgz
notebooks/: 00_notebook_example.ipynb  01_calculate_VKT.ipynb  01_optimize_VCR_thresholds.ipynb  02_calculate_total_VKT.ipynb  02_optimize_los_thresholds.ipynb  11_calculate_cold_emissions.ipynb  12_calculate_hot_emissions.ipynb  13_0_calculate_detector_emissons_vc.ipynb  13_1_calculate_detector_emissons_speed.ipynb  13_calculate_detector_emissons.ipynb  21_emission_gridding.ipynb  31_calculate_detector_emissons.ipynb  EF_test.ipynb  README.md  calculate_cold_emissions.ipynb  calculate_detector_emissons.ipynb  calculate_em_uncertainty.ipynb  calculate_hot_emissions.ipynb  calculate_timeprofiles.ipynb  emission_factor_variability_analysis.ipynb  emission_gridding.ipynb  emission_uncertainty.ipynb  explore_counting_data.ipynb  explore_traffic_counts.ipynb  hbefa_coldstart_emissions.ipynb  hbefa_module_multiprocessing.ipynb  hbefa_module_test.ipynb  inventory_processing.py  los_uncertainty_analysis.ipynb  notebook_example.ipynb  optimize_los_thresholds.ipynb  visum_counting_validation.ipynb
utils/: .env.example  README.md  calculate_vkt.py  calendar.py  calender.py  data_paths.py  download_bast_data.ipynb  excel_calendar.py  gridding.py  hbefa_cold_emissions.py  hbefa_hot_emissions.py  hbefa_requests.py  hot_emission_process.py  lmu_meteo_api.py  traffic_counts.py
(+76 files in other folders)
