[project]
name = "drive-inventory"
version = "0.1.0"
description = "A data-driven framework to estimate road transport emissions."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bokeh>=3.7.1",
    "geopandas>=1.0.1",
    "ipython>=9.0.2",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.1",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pyarrow>=19.0.1",
    "requests>=2.32.3",
    "seaborn>=0.13.2",
    "shapely>=2.0.7",
    "xlrd>=2.0.1",
]
